--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,92 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Library ignores
+/CHModloader/lib/UnityEngine.XRModule.dll
+/CHModloader/lib/UnityEngine.WindModule.dll
+/CHModloader/lib/UnityEngine.WebModule.dll
+/CHModloader/lib/UnityEngine.VRModule.dll
+/CHModloader/lib/UnityEngine.VideoModule.dll
+/CHModloader/lib/UnityEngine.VehiclesModule.dll
+/CHModloader/lib/UnityEngine.UnityWebRequestWWWModule.dll
+/CHModloader/lib/UnityEngine.UnityWebRequestTextureModule.dll
+/CHModloader/lib/UnityEngine.UnityWebRequestModule.dll
+/CHModloader/lib/UnityEngine.UnityWebRequestAudioModule.dll
+/CHModloader/lib/UnityEngine.UnityWebRequestAssetBundleModule.dll
+/CHModloader/lib/UnityEngine.UnityConnectModule.dll
+/CHModloader/lib/UnityEngine.UnityAnalyticsModule.dll
+/CHModloader/lib/UnityEngine.UNETModule.dll
+/CHModloader/lib/UnityEngine.UmbraModule.dll
+/CHModloader/lib/UnityEngine.UIModule.dll
+/CHModloader/lib/UnityEngine.UIElementsModule.dll
+/CHModloader/lib/UnityEngine.UI.dll
+/CHModloader/lib/UnityEngine.TLSModule.dll
+/CHModloader/lib/UnityEngine.TimelineModule.dll
+/CHModloader/lib/UnityEngine.Timeline.dll
+/CHModloader/lib/UnityEngine.TilemapModule.dll
+/CHModloader/lib/UnityEngine.TextRenderingModule.dll
+/CHModloader/lib/UnityEngine.TerrainPhysicsModule.dll
+/CHModloader/lib/UnityEngine.TerrainModule.dll
+/CHModloader/lib/UnityEngine.SubstanceModule.dll
+/CHModloader/lib/UnityEngine.StyleSheetsModule.dll
+/CHModloader/lib/UnityEngine.StandardEvents.dll
+/CHModloader/lib/UnityEngine.SpriteShapeModule.dll
+/CHModloader/lib/UnityEngine.SpriteMaskModule.dll
+/CHModloader/lib/UnityEngine.SpatialTrackingModule.dll
+/CHModloader/lib/UnityEngine.SpatialTracking.dll
+/CHModloader/lib/UnityEngine.SharedInternalsModule.dll
+/CHModloader/lib/UnityEngine.ScreenCaptureModule.dll
+/CHModloader/lib/UnityEngine.PhysicsModule.dll
+/CHModloader/lib/UnityEngine.Physics2DModule.dll
+/CHModloader/lib/UnityEngine.PerformanceReportingModule.dll
+/CHModloader/lib/UnityEngine.ParticleSystemModule.dll
+/CHModloader/lib/UnityEngine.ParticlesLegacyModule.dll
+/CHModloader/lib/UnityEngine.Networking.dll
+/CHModloader/lib/UnityEngine.JSONSerializeModule.dll
+/CHModloader/lib/UnityEngine.InputModule.dll
+/CHModloader/lib/UnityEngine.IMGUIModule.dll
+/CHModloader/lib/UnityEngine.ImageConversionModule.dll
+/CHModloader/lib/UnityEngine.HotReloadModule.dll
+/CHModloader/lib/UnityEngine.GridModule.dll
+/CHModloader/lib/UnityEngine.GameCenterModule.dll
+/CHModloader/lib/UnityEngine.FacebookModule.dll
+/CHModloader/lib/UnityEngine.dll
+/CHModloader/lib/UnityEngine.DirectorModule.dll
+/CHModloader/lib/UnityEngine.CrashReportingModule.dll
+/CHModloader/lib/UnityEngine.CoreModule.dll
+/CHModloader/lib/UnityEngine.ClusterRendererModule.dll
+/CHModloader/lib/UnityEngine.ClusterInputModule.dll
+/CHModloader/lib/UnityEngine.CloudWebServicesModule.dll
+/CHModloader/lib/UnityEngine.ClothModule.dll
+/CHModloader/lib/UnityEngine.BaselibModule.dll
+/CHModloader/lib/UnityEngine.AudioModule.dll
+/CHModloader/lib/UnityEngine.AssetBundleModule.dll
+/CHModloader/lib/UnityEngine.ARModule.dll
+/CHModloader/lib/UnityEngine.AnimationModule.dll
+/CHModloader/lib/UnityEngine.Analytics.dll
+/CHModloader/lib/UnityEngine.AIModule.dll
+/CHModloader/lib/UnityEngine.AccessibilityModule.dll
+/CHModloader/lib/Unity.TextMeshPro.dll
+/CHModloader/lib/Unity.Analytics.DataPrivacy.dll
+/CHModloader/lib/System.Xml.dll
+/CHModloader/lib/System.Windows.Forms.dll
+/CHModloader/lib/System.Transactions.dll
+/CHModloader/lib/System.Security.dll
+/CHModloader/lib/System.Runtime.Serialization.Formatters.Soap.dll
+/CHModloader/lib/System.Numerics.dll
+/CHModloader/lib/System.EnterpriseServices.dll
+/CHModloader/lib/System.Drawing.dll
+/CHModloader/lib/System.dll
+/CHModloader/lib/System.Data.dll
+/CHModloader/lib/System.Core.dll
+/CHModloader/lib/System.Configuration.dll
+/CHModloader/lib/Rewired_Windows_Lib.dll
+/CHModloader/lib/Rewired_Core.dll
+/CHModloader/lib/NAudio.dll
+/CHModloader/lib/mscorlib.dll
+/CHModloader/lib/Mono.WebBrowser.dll
+/CHModloader/lib/Mono.Security.dll
+/CHModloader/lib/Mono.Posix.dll
+/CHModloader/lib/Bass.Net.dll
+/CHModloader/lib/Accessibility.dll
